--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
         width: 32px;
       }
       svg {
-        display: block;
+        border: 1px solid lightgrey;
       }
       #root {
         padding: 32px;
